--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: true
 contact_links:
   - name: Question
-    url: https://users.rust-lang.org
-    about: Please ask and answer questions about Rust on the user forum.
+    url: https://users.dustlang.com
+    about: Please ask and answer questions about Dust on the user forum.
   - name: Feature Request
-    url: https://internals.rust-lang.org/
+    url: https://internals.dustlang.com/
     about: Please discuss language feature requests on the internals forum.
